Feat: Theme the members filter section.

--- a/src/components/components/filter/filter.scss
+++ b/src/components/components/filter/filter.scss
@@ -85,6 +85,7 @@
     select {
       border: none;
       background-color: color('white');
+      width: 100%;
       cursor: pointer;
     }
   }
