--- a/src/components/components/formated-text/formated-text.scss
+++ b/src/components/components/formated-text/formated-text.scss
@@ -12,17 +12,10 @@
 
   &__icon {
     display: inline-block;
-    vertical-align: middle;
     color: color('brand');
     position: absolute;
-    left: -37px; // icon size + distance from text
-    top: 50%;
-    transform: translateY(-50%);
-
-    svg {
-      width: 22px;
-      height: 22px;
-    }
+    left: -33px; // icon size + distance from text
+    top: 2px;
   }
 
   &__text {
