--- a/src/components/components/club-teaser-list/club-teaser.scss
+++ b/src/components/components/club-teaser-list/club-teaser.scss
@@ -62,6 +62,12 @@
     @include margin-top(4.5px);
     font-weight: 600;
 
+
+    // Overwrite plugin css.
+    &.button {
+      color: color('brand');
+    }
+
     .icon {
       margin-left: 4px;
       margin-right: -4px;
