--- a/src/components/pages-styles/find-club.scss
+++ b/src/components/pages-styles/find-club.scss
@@ -26,33 +26,27 @@
     justify-content: flex-start;
 
     @include breakpoint($tablet) {
-      justify-content: flex-end;
-      margin-top: 0;
+      @include margin-top(0);
+      display: block;
+      float: right;
     }
   }
 
-  &__filters-wrapper-inner {
-    min-width: unset;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 0;
-
-    @include breakpoint($tablet) {
-      max-width: 540px;
-      flex-wrap: nowrap;
+  &__filter {
+    &-toggle {
+      padding: 0 10px;
+      width: 100%;
     }
 
-    .filter {
-      @include padding(10px);
-      @include padding-left(25px);
-      @include padding-right(32px);
-      position: relative;
-      width: 100%;
+    &-search {
+      padding: 0 10px 0 15px;
+      border-top: 1px solid color('grey-basic');
 
-      @include breakpoint($tablet) {
-        width: 50%;
+      @include breakpoint($mobile) {
+        border: none;
+        width: auto;
+        position: relative;
+
         &::before {
           content: '';
           position: absolute;
@@ -65,18 +59,34 @@
         }
       }
 
-      &:first-child {
-        &::before {
-          content: none;
-        }
-      }
+    }
+  }
+
+  &__filters-wrapper-inner {
+    min-width: unset;
+    width: 100%;
+    padding: 0;
+
+    @include breakpoint($mobile) {
+      display: flex;
+      justify-content: space-between;
+
+      margin-left: auto;
+      flex-wrap: nowrap;
+    }
+
+    @include breakpoint($tablet) {
+      max-width: 540px;
+    }
+
+    .filter {
+      position: relative;
 
       &--search {
-        border-top: 1px solid color('grey-basic');
         width:100%;
 
+
         @include breakpoint($tablet) {
-          border: none;
           width: auto;
         }
 
@@ -92,12 +102,6 @@
         }
 
         input {
-          padding: 0;
-          padding-top: 2px;
-          padding-bottom: 2px;
-          border: none;
-          margin-left: 10px;
-
           &::placeholder {
             opacity: 1;
           }
@@ -106,7 +110,7 @@
 
       &--toggle {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
 
         @include breakpoint($tablet) {
           justify-content: space-between;
