--- a/src/components/pages-styles/members.scss
+++ b/src/components/pages-styles/members.scss
@@ -7,7 +7,9 @@
   &__divider {
     @include breakpoint($desktop) {
       position: relative;
-      top: -15px
+      top: -15px;
+      margin-top: 0;
+      width: 50px;
     }
   }
 
@@ -40,10 +42,6 @@
     padding-bottom: 10px;
   }
 
-  &__filters-section {
-    @include margin-bottom(1);
-  }
-
   &__filter-list {
     display: flex;
     flex-wrap: wrap;
@@ -60,20 +58,25 @@
 
     &--search {
       width: 100%;
+      @include padding-left(20px);
 
-      @include breakpoint($mobile) {
-        @include padding-left(25px);
+      .filter,
+      input {
+        width: 100%;
+      }
+
+      .icon {
+        color: color('topaz');
       }
     }
 
     &--select {
-      @include padding-right(15px);
+      @include padding-right(20px);
       position: relative;
       width: 100%;
 
       @include breakpoint($mobile) {
-        @include padding-right(25px);
-        max-width: 190px;
+        width: 190px;
       }
 
       &::before {
@@ -90,6 +93,10 @@
 
       .filter {
         width: 100%;
+      }
+
+      select {
+        @include padding-left(20px);
       }
     }
   }
