Integrates with the new backend and adds missing content text to fields without content.

--- a/src/components/components/member-teaser/member-teaser.scss
+++ b/src/components/components/member-teaser/member-teaser.scss
@@ -2,9 +2,11 @@
 
 .member-teaser {
   position: relative;
+  min-height: 90px;
 
   &__inner {
     display: flex;
+    min-height: 70px;
   }
 
   &__image-wrapper {
