--- a/src/components/components/member-teaser/member-teaser.scss
+++ b/src/components/components/member-teaser/member-teaser.scss
@@ -79,6 +79,7 @@
     padding: 0 7px 0 0;
     display: block;
     background-color: color('blue-dark');
+    height: 20px;
   }
 
   &__leader-tag-bg {
