--- a/src/components/pages-styles/faq-page.scss
+++ b/src/components/pages-styles/faq-page.scss
@@ -93,6 +93,13 @@
       @include font-size(16px);
       @include line-height(24px);
       position: relative;
+      text-align: left;
+    }
+
+    ul {
+      list-style: disc;
+      margin-top: 14px;
+      margin-bottom: 14px;
     }
   }
 
