--- a/src/components/navigation/main-navigation/main-navigation.scss
+++ b/src/components/navigation/main-navigation/main-navigation.scss
@@ -38,6 +38,10 @@
 
     &__item {
       padding-right: 22px;
+
+      &:last-child {
+        padding-right: 0;
+      }
     }
 
     &__item-wrapper {
