--- a/src/components/components/user-menu/user-menu.scss
+++ b/src/components/components/user-menu/user-menu.scss
@@ -9,14 +9,32 @@
     @include margin-right(7px);
   }
 
+  &__user-image-wrapper {
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    overflow: hidden;
+    display: flex;
+  }
+
+  &__user-image {
+    max-height: 100%;
+    max-width: 100%;
+    width:100%;
+    object-fit: cover;
+  }
+
   @include breakpoint($tablet) {
-    position: relative;
+    // position: relative;
     bottom: auto;
 
     &__popup {
       position: absolute;
       right: 0;
-      bottom: -25px;
+      left: 0;
+      bottom: -40px;
+      border-radius:4px;
+      box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
       background-color: white;
       transform: translateY(100%);
     }
