--- a/src/components/layouts/layout-base/layout-base.scss
+++ b/src/components/layouts/layout-base/layout-base.scss
@@ -9,6 +9,7 @@
   padding-top: 120px;
   padding-bottom: 60px;
   overflow: hidden;
+  position: relative;
 
   @include breakpoint($tablet) {
     padding-top: 190px;
