Member edit partially implemented.

--- a/src/components/components/member/member.scss
+++ b/src/components/components/member/member.scss
@@ -211,4 +211,13 @@
     }
 
   }
+
+  &__checkbox {
+    display: flex;
+    align-items: flex-start;
+
+    input {
+      margin-top: 5px;
+    }
+  }
 }
