--- a/src/components/components/member/member.scss
+++ b/src/components/components/member/member.scss
@@ -215,9 +215,37 @@
   &__checkbox {
     display: flex;
     align-items: flex-start;
+    position: relative;
+    padding-left: 5px;
+    text-align: left;
+
 
     input {
       margin-top: 5px;
+      position: absolute;
+      left: 0;
     }
+  }
+
+  .member__text-field {
+    padding: 0;
+    border-radius: 0;
+    border: none;
+    border-bottom: 1px solid rgba(0,0,0,0.25);
+    text-align: center;
+    color: color('grey-dark');
+
+
+    &:active,
+    &:focus,
+    &:hover  {
+      border: none;
+      padding: 0;
+      border-bottom: 1px solid rgba(0,0,0,0.25);
+    }
+  }
+
+  &__newsletter {
+    margin-top: 20px;
   }
 }
