--- a/src/components/components/banner/banner.scss
+++ b/src/components/components/banner/banner.scss
@@ -128,12 +128,16 @@
         top: -60px;
         left: 50px;
         transform: rotate(15deg);
+        width: 58px;
+        height: 20px;
       }
 
       &__wave {
         position: absolute;
         top: 45px;
         right: -10px;
+        width: 22px;
+        height: 22px;
 
         @include breakpoint($desktop) {
           right: -30px;
@@ -144,6 +148,8 @@
         position: absolute;
         bottom: -60px;
         right: -10px;
+        width: 63px;
+        height: 57px;
 
         @include breakpoint($tablet) {
           bottom: -60px;
