--- a/src/components/components/club-full/club-full.scss
+++ b/src/components/components/club-full/club-full.scss
@@ -215,7 +215,28 @@
 
   }
 
+  &__login {
+    @include margin-bottom(1);
+  }
+
   textarea {
     min-height: 200px;
+  }
+
+  &__sidebar-content {
+    width: 100%;
+
+    input {
+     width: 100%;
+   }
+  }
+
+  &__button-list {
+    display: flex;
+  }
+
+  &__info-container {
+    display: flex;
+    align-items: flex-start;
   }
 }
