--- a/src/components/components/club-info/club-info.scss
+++ b/src/components/components/club-info/club-info.scss
@@ -84,6 +84,7 @@
     min-height: 100%;
     display: flex;
     padding-left: 50px;
+    padding-right:20px;
 
     @include breakpoint($mobile) {
       @include padding-left(65px);
