--- a/src/components/components/formated-text/formated-text.scss
+++ b/src/components/components/formated-text/formated-text.scss
@@ -9,6 +9,7 @@
   margin-top: auto;
   margin-bottom: auto;
   position: relative;
+  word-break: break-all;
 
   &__icon {
     display: inline-block;
