--- a/src/components/components/club-teaser-list/club-teaser.scss
+++ b/src/components/components/club-teaser-list/club-teaser.scss
@@ -56,6 +56,8 @@
   &__description {
     @include font-size(12px);
     display: block;
+    max-height: 42px;
+    overflow: hidden;
   }
 
   &__button {
