--- a/src/components/layouts/layout-base/layout-base.scss
+++ b/src/components/layouts/layout-base/layout-base.scss
@@ -10,9 +10,22 @@
   padding-bottom: 60px;
   overflow: hidden;
   position: relative;
+  width: 100%;
 
   @include breakpoint($tablet) {
     padding-top: 190px;
     padding-bottom: 100px;
+  }
+
+  &__wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  &__bottom {
+    margin-top: auto;
+    width: 100%;
   }
 }
