--- a/src/components/components/club-teaser-list/club-teaser.scss
+++ b/src/components/components/club-teaser-list/club-teaser.scss
@@ -38,6 +38,10 @@
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   &__text {
