Fix: User menu items take cover all the availiable space and larger area is clickable..

--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -41,7 +41,7 @@ $chroma: add-colors((
         blue-light:             #12CACB,
 
         light-green:            #D6F2E9,
-        red:                    #C00,
+        red:                    #D0021B,
         grapefruit:             #FF5D5D,
         sunny-yellow:           #F8E71C,
 
