--- a/src/components/pages-styles/find-club.scss
+++ b/src/components/pages-styles/find-club.scss
@@ -62,7 +62,7 @@
     }
   }
 
-  &__filters-wrapper-inner {
+  &__filters-wrapper-inner.shadow-box {
     min-width: unset;
     width: 100%;
     padding: 0;
