--- a/src/components/components/teaser-box/teaser-box.scss
+++ b/src/components/components/teaser-box/teaser-box.scss
@@ -5,24 +5,14 @@
 // .teaser-box--dummy: Do not display data, but a grey horizontal placeholder line.
 
 .teaser-box {
-  @include margin-left(21px);
   margin-bottom: 15px;
   min-width: 265px;
   min-height: 220px;
-
-  @include breakpoint($tablet) {
-    min-height: 100px;
-  }
-
-
-  &:last-child {
-    // REVIEW: The rule is accepted. It won't take effect though.
-    @include margin-right(21px);
-  }
+  display: flex;
 
   @include breakpoint($tablet) {
     @include margin-left(0);
-    // @include margin-bottom(0);
+    min-height: 100px;
     min-width: none;
     width: 100%;
   }
@@ -43,13 +33,11 @@
   &__wrapper-link {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    height: 100%;
   }
 
   &__link-inner {
     display: flex;
-    height: 100%;
+    width: 100%;
   }
 
   &__image-wrapper {
@@ -105,11 +93,18 @@
   }
 
   &__dummy-row {
-    width: 95%;
+    width: 100%;
     height: 10px;
     display: block;
     border-radius: 5px;
     background-color: #f5f7f0;
+    margin-top: auto;
+
+    &--small {
+      margin-bottom: auto;
+      margin-top: 10px;
+      width: 50%;
+    }
   }
 
   &__list-wrapper--dummy {
