--- a/src/components/layouts/layout-scroll/layout-scroll.scss
+++ b/src/components/layouts/layout-scroll/layout-scroll.scss
@@ -11,19 +11,27 @@
     background-color: rgba(216, 216, 216, 0.15);
     mix-blend-mode: multiply;
     margin-top: 8px;
-    margin-left: -$gutters-mobile;
-    margin-right: -$gutters-mobile;
-    padding-left: $gutters-mobile/2;
-    padding-right: $gutters-mobile/2;
+    margin-left: -$padding-mobile;
+    margin-right: -$padding-mobile;
+    padding-left: $padding-mobile;
+    padding-right: $padding-mobile;
     padding-top: 15px;
     overflow: auto;
     box-shadow: inset 0 -1px 1px 0 rgba(0, 0, 0, 0.0525), inset 0 1px 1px 0 rgba(0, 0, 0, 0.0525);
 
     &__item {
-      margin-left: $gutters-mobile/2;
-      margin-right: $gutters-mobile/2;
+      margin-left: 0;
+      margin-right: $gutters-mobile;
       margin-bottom: 15px;
       display: flex;
+
+      &:last-child {
+        &::after {
+          display: block;
+          width: $padding-mobile;
+          content: "";
+        }
+      }
     }
 
     &--stretch-items {
