Fix: logout button at user menu takes all availiable wdth and now all the expexted region is clickable.

--- a/src/components/components/user-popup/user-popup.scss
+++ b/src/components/components/user-popup/user-popup.scss
@@ -42,6 +42,8 @@
       border: none;
       background-color: transparent;
       color: color('red');
+      width: 100%;
+      text-align: left;
 
       &:focus,
       &:active,
