--- a/src/components/components/club-info/club-info.scss
+++ b/src/components/components/club-info/club-info.scss
@@ -103,7 +103,7 @@
     }
   }
 
-  &__shape-square {
+  &__shape-square.shape {
     position: absolute;
     right: 0;
     bottom: -20px;
@@ -114,7 +114,7 @@
     z-index: -1; // to be hidden behind the become a member button.
   }
 
-  &__shape-circle {
+  &__shape-circle.shape {
     position: absolute;
     bottom: -121px;
     transform: translateY(100%);
