--- a/src/components/components/event/event.scss
+++ b/src/components/components/event/event.scss
@@ -24,6 +24,13 @@
 
   &__date {
     font-weight: 300;
+    display: block;
+
+    &-start + .event__date-end {
+      &:before {
+        content: " - ";
+      }
+    }
   }
 
   &__value {
@@ -33,5 +40,9 @@
   &__secondary {
     display: block;
     font-weight: 300;
+  }
+
+  &.is-past-event {
+    opacity: .6;
   }
 }
