Add form wrapper to club.

--- a/src/components/forms/text-input/text-input.scss
+++ b/src/components/forms/text-input/text-input.scss
@@ -25,4 +25,14 @@
   &--member-name {
 
   }
+
+  &:invalid {
+    border-color: color('red');
+
+    &:active,
+    &:focus,
+    &:hover {
+      border-color: color('red');
+    }
+  }
 }
