Cleanup all base css components.

--- a/src/components/base-styles/base/forms/components/button/_button.scss
+++ b/src/components/base-styles/base/forms/components/button/_button.scss
@@ -13,11 +13,14 @@
 // .button--disabled - Disabled button style.
 // .button--submit - Submit button style.
 // .button--reset - Reset button style.
+// .button--medium - Medium button style.
 // .button--small - Small button style.
+// .button--x-small - Extra Small button style.
 // .button--cta - Call to action button style.
 // .button--full - Full width button style.
 // .button--header - Header button style.
 // .button--no-style - Seems like simple text with hover, used in faq titles.
+// .button--icon - Button with icon.
 
 
 // 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
