--- a/src/components/base-styles/base/title/_title.scss
+++ b/src/components/base-styles/base/title/_title.scss
@@ -11,7 +11,7 @@
 // .title--small - Title smaller than the default title.
 // .title--x-small - Extra small title.
 // .title--xx-small - Extra extra small title.
-// .title--xx-small - 3 * Extra small title.
+// .title--xxx-small - 3 * Extra small title.
 // .title--light - Title with light color.
 // .title--centered - Title aligned at the center.
 .title,
