--- a/src/components/components/club-full/club-full.scss
+++ b/src/components/components/club-full/club-full.scss
@@ -1,10 +1,9 @@
 @import './../../base-styles/init/init';
 
-/*
-  The full view of a club.
-  Themes the layout of the page, the header and some decorative shapes.
-*/
-
+// Club full
+//
+// The full view of a club.
+// Themes the layout of the page, the header and some decorative shapes.
 .club-full {
   .button {
     svg {
