--- a/src/components/components/external-link-box/external-link-box.scss
+++ b/src/components/components/external-link-box/external-link-box.scss
@@ -1,9 +1,8 @@
 @import './../../base-styles/init/init.scss';
 
-/*
-  
-*/
-
+//  External link box
+//
+//  External links in shadow box with image title and link.
 .external-link-box {
   display: flex;
 
@@ -21,7 +20,6 @@
     }
   }
 
-  // Takes up all container height.
   &__link-inner {
     display: flex;
     flex-direction: column;
