--- a/src/components/components/footer/footer.scss
+++ b/src/components/components/footer/footer.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init';
 
+//  Footer
+//
+//  Styles page footer.
 .footer {
   width: 100%;
   color: color('white');
