Document home become a meber, image-box, job listing and join cta components.

--- a/src/components/components/header/header.scss
+++ b/src/components/components/header/header.scss
@@ -1,6 +1,7 @@
 @import './../../base-styles/init/init';
 
-// Header styling.
+// Header
+//
 // Adds header styles and layout.
 .header {
   position: absolute;
