--- a/src/components/components/home-become-member/home-become-member.scss
+++ b/src/components/components/home-become-member/home-become-member.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init';
 
+// Home become a member
+//
+// Adds styles for home page become a member.
 .home-become-member {
   display: flex;
   justify-content: space-between;
