--- a/src/components/components/join-cta/join-cta.scss
+++ b/src/components/components/join-cta/join-cta.scss
@@ -1,5 +1,11 @@
 @import './../../base-styles/init/init.scss';
 
+// Join the network CTA
+//
+// Join the network CTA is used to invite new members to the network,
+//
+// .image-box--tall - A tall CTA that appears at about-us page.
+
 .join-cta {
   display: flex;
   width: 100%;
